Fixed spacing issue

--- a/css/custom/main.css
+++ b/css/custom/main.css
@@ -16,3 +16,7 @@ body > .container {
     padding-bottom: 1em;
     display: block;
 }
+
+.paper-button {
+    margin-top: 0.25em;
+}
